fix css sur la view heuristic. remis un algo pour générer des notes DEBUG : si le nombre total de cards est nil ça crash.. je n'ai pas réussi à contourné le problème, mais ça reste cool d'avoir des statistique visible.

--- a/app/assets/stylesheets/components/_show_decks.scss
+++ b/app/assets/stylesheets/components/_show_decks.scss
@@ -57,6 +57,9 @@ height:80vh;
     height:120px;
     border-radius: 50%;
     background-color: $purple;
+    display:flex;
+    align-items:center;
+    justify-content:center;
   }
   .time{
     display:flex;
@@ -113,7 +116,7 @@ height:80vh;
 
 .separator {
   height:3px;
-  background-color:$white;
+  background-color:$mediumgreen;
   width:90%;
   margin:30px auto;
 }
@@ -128,53 +131,3 @@ height:80vh;
       margin: 5px;
     }
   }
-
-checkbox
-  input[type=checkbox] + label {
-  display: block;
-  margin: 0.2em;
-  cursor: pointer;
-  padding: 0.2em;
-}
-
-input[type=checkbox] {
-  display: none;
-}
-
-input[type=checkbox] + label:before {
-  content: "\2714";
-  border: 0.1em solid #000;
-  border-radius: 0.2em;
-  display: inline-block;
-  width: 1em;
-  height: 1em;
-  padding-left: 0.2em;
-  padding-bottom: 0.3em;
-  margin-right: 0.2em;
-  vertical-align: bottom;
-  color: transparent;
-  transition: .2s;
-}
-
-input[type=checkbox] + label:active:before {
-  transform: scale(0);
-}
-
-input[type=checkbox]:checked + label:before {
-  background-color: MediumSeaGreen;
-  border-color: MediumSeaGreen;
-  color: #fff;
-}
-
-input[type=checkbox]:disabled + label:before {
-  transform: scale(1);
-  border-color: #aaa;
-}
-
-input[type=checkbox]:checked:disabled + label:before {
-  transform: scale(1);
-  background-color: #bfb;
-  border-color: #bfb;
-}
-
-
