--- a/app/assets/stylesheets/pages/_theme_show.scss
+++ b/app/assets/stylesheets/pages/_theme_show.scss
@@ -8,11 +8,11 @@
 
     p,
     h4 {
-      color: grey;
+      color: $mediumgreen;
     }
 
     .nb {
-      color: white;
+      color: $white;
     }
   }
 }
